[form-builder] fix warning container too close to change bar

--- a/packages/@sanity/form-builder/src/inputs/Warning.css
+++ b/packages/@sanity/form-builder/src/inputs/Warning.css
@@ -4,6 +4,7 @@
   /* empty */
   padding-top: var(--small-padding);
   padding-bottom: var(--medium-padding);
+  padding-right: var(--small-padding);
 }
 
 .heading {
